--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     },
     "homepage": "https://github.com/thanhhung270502/clothes_shop#readme",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
+        "@fortawesome/free-brands-svg-icons": "^6.0.0",
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/react-fontawesome": "^0.1.17",
+        "bootstrap-icons": "^1.8.3",
         "express": "^4.18.1",
         "express-handlebars": "^6.0.6",
         "mongoose": "^6.4.4"
