--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "bootstrap": "^5.2.0-beta1",
         "bootstrap-icons": "^1.8.3",
         "express": "^4.18.1",
         "express-handlebars": "^6.0.6",
-        "mongoose": "^6.4.4"
+        "mongoose": "^6.4.4",
+        "mongoose-slug-generator": "^1.0.4"
     },
     "devDependencies": {
         "husky": "^8.0.1",
