--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "bootstrap-icons": "^1.8.3",
         "express": "^4.18.1",
         "express-handlebars": "^6.0.6",
+        "method-override": "^3.0.0",
         "mongoose": "^6.4.4",
         "mongoose-slug-generator": "^1.0.4"
     },
